# Gaman

./: README.md  pyproject.toml
app/: main.py
core/: symbol_sets.py  trainer.py
data/: hiragana.py  katakana.py
